Project

General

Profile

Actions

Bug #13112

closed

io/console io.winsize=[rows,cols] throws TypeError: no implicit conversion of false into Integer

Bug #13112: io/console io.winsize=[rows,cols] throws TypeError: no implicit conversion of false into Integer

Added by tompng (tomoya ishida) over 9 years ago. Updated over 9 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.4.0p0 (2016-12-24 revision 57164) [x86_64-darwin16]
[ruby-core:79004]

Description

The doc says

winsize = [rows, columns]
Tries to set console size. The effect depends on the platform and the running environment.
You must require 'io/console' to use this method.
https://docs.ruby-lang.org/en/2.4.0/IO.html#method-i-winsize-3D

but it doesn't work.

require 'io/console'
STDIN.winsize=[] #=> ArgumentError: wrong number of arguments (given 0, expected 2..4)
STDIN.winsize=[24,80,1,2] #=> ok(args=4)
STDIN.winsize=[24,80,nil,nil] #=> ok(args=4)
STDIN.winsize=[24,80,1] #=> ok(args=3)
STDIN.winsize=[24,80,nil] #=> ok(args=3)
STDIN.winsize=[24,80] #=> args=2 unexpectedly throws TypeError: no implicit conversion of false into Integer
OS: macOS Sierra 10.12.2
versions:
ruby 2.4.0 -> TypeError
ruby 2.3.1 -> TypeError
ruby 2.0.0 -> ok
// ext/io/console/console.c
static VALUE
console_set_winsize(VALUE io, VALUE size)
{
    ....
    size = rb_Array(size);
    rb_check_arity(RARRAY_LENINT(size), 2, 4);
    sz = RARRAY_CONST_PTR(size);
    row = sz[0], col = sz[1], xpixel = sz[2], ypixel = sz[3];
    ...
    #define SET(m) ws.ws_##m = NIL_P(m) ? 0 : (unsigned short)NUM2UINT(m)
    SET(row);
    SET(col);
    SET(xpixel);
    SET(ypixel);
    // is using xpixel(==sz[2]) and ypixel(==sz[3]) ok? (RARRAY_LENINT(size) might be less than 4)
    // maybe sz[3] is 0(object_id of false?) when RARRAY_LENINT(size) is 2
Actions

Also available in: PDF Atom